# drives

./: Cargo.toml  Changelog.md  LICENSE  README.md  crates-io.md  release.sh
.github/workflows/: build_and_test.yml  publish.yml
examples/: simple_main.rs  sizes.rs
resources/test/: gptdisk.img
src/: error.rs  fs_wrap.rs  gpt.rs  lib.rs  mounts.rs  size.rs
