[package]
name = "drives"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Library listing mounted or mountable drives on linux"
repository = "https://github.com/sorcerersr/drives"
keywords = ["lib", "linux", "drives", "partitions", "block-devices"]
categories = ["os::linux-apis"]
authors = ["Stefan Rabmund <sorcerersr@mailbox.org>"]
readme = "README.md"

[dependencies]
anyhow = "1.0"

[dev-dependencies]
mockall = "0.11.3"