[package]
name = "drives"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library listing mounted or mountable drives on linux"
repository = "https://github.com/sorcerersr/drives"
keywords = ["lib", "linux", "drives", "partitions", "block-devices"]
categories = ["os::linux-apis"]
authors = ["Stefan Rabmund <sorcerersr@mailbox.org>"]
readme = "crates-io.md"

[dependencies]
gpt = {version = "4.1.0", optional=true}
thiserror = "^2.0"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "simple_main"
path = "examples/simple_main.rs"
